4-kubernetes/4.8-ingress/4.8.4-configurando-ingress-e-dns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: myingress
spec:
  rules:
  - host: ingress.fullcycle.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
